[package]
name = "textty"
version = "0.1.0"
description = "TUI-klient för SVT Text-TV"
authors = ["Lars Sjöberg <lsjoeberg@protonmail.com>"]
repository = "https://github.com/lsjoeberg/textty"
readme = "README.md"
license = "MIT"
keywords = ["teletext", "tui"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.3"
ratatui = "0.29.0"
scraper = "0.23.1"
serde = { version = "1.0.216", features = ["derive"] }
serde-aux = "4.5.0"
thiserror = "2.0.9"
ureq = { version = "3.0.11", features = ["json"] }

[profile.ci]
inherits = "dev"
debug = false

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.clippy]
pedantic = "warn"
