[package]
name = "textty"
version = "0.1.0"
description = "TUI-klient för SVT Text-TV"
authors = ["Lars Sjöberg <lsjoeberg@protonmail.com>"]
repository = "https://github.com/lsjoeberg/textty"
readme = "README.md"
license = "MIT"
keywords = ["teletext", "tui"]
categories = ["command-line-utilities"]
edition = "2024"
rust-version = "1.87.0"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
ratatui = "0.30.0"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
thiserror = "2.0.18"
ureq = { version = "3.3.0", features = ["json"] }

[profile.ci]
inherits = "dev"
debug = false

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.clippy]
pedantic = "warn"
